# Chess_gui

./: Cargo.toml
egui_chess/src/: app.rs  utils.rs
egui_chess/src/app/: helper.rs  input.rs  render.rs
src/: app.rs  main.rs  play.rs  position_creator.rs  utils.rs
src/play/: helper.rs  input.rs  render.rs  state.rs
src/position_creator/: helper.rs  render.rs
