[package]
name = "egui_chess"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.1"
chess_lib = { git = "https://github.com/Ninja88201/chess_lib.git" }
chess_engine = { git = "https://github.com/Ninja88201/chess_engine.git" }
eframe = "0.31.1"
image = "0.25.6"
rand = "0.9.1"
getrandom = { version = "0.3.3", features = ["wasm_js"]}
instant = { version = "0.1.13", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
web-sys = { version = "0.3.70", features = ["Blob", "Url", "Document", "HtmlAnchorElement", "Window"] }
log = "0.4.27"
